--- a/p3/index.html
+++ b/p3/index.html
@@ -369,7 +369,7 @@
 <!--页码-->
 <div id="paginator">
   <span class="page-number current"><a href="/"><i class="mdui-icon material-icons">&#xe88a;</i></a></span>
-  <span class="page-number current"><a href="/"><i class="mdui-icon material-icons">&#xe5cb;</i></a></span>
+  <span class="page-number current"><a href="/p4"><i class="mdui-icon material-icons">&#xe5cb;</i></a></span>
   <span class="page-number current"><a href="/p2"><i class="mdui-icon material-icons">&#xe5cc;</i></a></span>
   <span class="page-number current"><a href="/p2"><i class="mdui-icon material-icons">&#xe5dd;</i></a></span>
 </div>
