--- a/p2/index.html
+++ b/p2/index.html
@@ -11,6 +11,8 @@
     <!--mdui-->
 	<link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.2/css/mdui.min.css">
 	<script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.2/js/mdui.min.js"></script>
+	<link rel="stylesheet" href="//lyfgta.com/css/mdui.min.css">
+	<script src="//lyfgta.com/js/mdui.min.js"></script>
 	<!--theme-->
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">  
