--- a/p4/index.html
+++ b/p4/index.html
@@ -173,7 +173,7 @@
   <span class="page-number current"><a href="/"><font size="4.5" align="center">首页</font></a></span>
   <span class="page-number current"><a href="/"><font size="4.5" align="center">上一页</font></a></span>
   <span class="page-number current"><a href="/p3"><font size="4.5" align="center">下一页</font></a></span>
-  <span class="page-number current"><a href="/p2"><font size="4.5" align="center">末尾页</font></a></span>
+  <span class="page-number current"><a href="/p2"><font size="4.5" align="center">尾页</font></a></span>
 </div>
 </br>
 
