--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ text-decoration:none;
 <!--分割线-->	
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <div class="mdui-card-media">
-        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//lyfgta.com/pic/AboutMe.png.jpg'}" draggable="false">
+        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//lyfgta.com/pic/AboutMe.png'}" draggable="false">
         <div class="mdui-card-menu">
             <!-- <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i class="mdui-icon material-icons">share</i></button> -->
         </div>
