--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ text-decoration:none;
         
         
     </span>
-        <a class="info mdui-text-color-pink " href="/" style="float:right;">网&nbsp站&nbsp介&nbsp绍</a>
+        <a class="info mdui-text-color-pink " href="/about" style="float:right;">网&nbsp站&nbsp介&nbsp绍</a>
     </div>
 </div>           
 <!--分割线-->
