--- a/about/index.html
+++ b/about/index.html
@@ -138,6 +138,8 @@ text-decoration:none;
 	<li>LYFGTA官方QQ群：<br>
 	<a href="https://qm.qq.com/cgi-bin/qm/qr?k=ADUAb3egKzUZseFkb2JZ7ngUJe5CE6_W&authKey=+JTZQPyxJczPc7Hqhf8X7KASHF9BNJLZRoC7tJgwSLUEn+IyingFKz7QIYi/LRPR&noverify=0" target="_blank" rel="noopener">531776786 | 立即加入</a></li>
 	</ul>
+        <p><h3>&nbsp&nbsp&nbsp&nbsp微信公众号</h3></p>
+        <img src="//lyfgta.com/pic/qrcode1646537950091.jpg">
 	</div>
 	</div>
 	<h2>土豪打赏榜</h2>
