--- a/p4/index.html
+++ b/p4/index.html
@@ -104,6 +104,7 @@
 <br>
 <br>
 <!--分割线-->
+<a class="info mdui-text-color-pink " href="/posts/17111/" style="float:right;">
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <div class="mdui-card-media">
         <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//lyfgta.com/pic/gtaczb.png'}" draggable="false">
@@ -129,6 +130,7 @@
         <a class="info mdui-text-color-pink " href="/posts/17111/" style="float:right;">去围观</a>
     </div>
 </div> 
+</a>
 <!--分割线-->
 
 <!--分割线-->
