--- a/p4/index.html
+++ b/p4/index.html
@@ -104,6 +104,7 @@
 <br>
 <br>
 <!--分割线-->
+    <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <a class="info mdui-text-color-pink " href="/posts/17111/" style="float:right;">
     <div class="mdui-card-media">
         <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//lyfgta.com/pic/gtaczb.png'}" draggable="false">
@@ -112,13 +113,12 @@
         </div>
         <div class="mdui-card-media-covered mdui-card-media-covered-gradient">
             <div class="mdui-card-primary">
-                <div class="title_font float_left mdui-card-primary-title">
-                    
-                </div>
+                
             </div>
         </div>
     </div>
-</a>    
+</a>  
+</div>
 <!--分割线-->
 
 <!--分割线-->
