--- a/css/index.html
+++ b/css/index.html
@@ -295,3 +295,30 @@ article p {
     margin-bottom: 20px;
     font-size: 1.5em;
 }
+#content_progress {
+      /* Positioning */
+      position: fixed;
+      left: 0;
+      top: 0;
+      z-index: 1000;
+      width: 100%;
+      height: 2px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      border: none;
+      background-color: transparent;
+      color: #35a935;
+}
+
+#content_progress::-webkit-progress-bar {
+      background-color: transparent;
+}
+
+#content_progress::-webkit-progress-value {
+      background-color: #35a935;
+}
+
+#content_progress::-moz-progress-bar {
+      background-color: #35a935;
+}
