--- a/video/index.html
+++ b/video/index.html
@@ -36,7 +36,7 @@ text-decoration:none;
 }
 
 #container {
-	width: 666px;
+	width: 100%;
 	height: 99px;
 	overflow: hidden;
 }
@@ -48,7 +48,7 @@ text-decoration:none;
  
 #photo > img {
 	float: left;
-	width: 666px;
+	width: 100%;
 	height: 99px;
 }
  
