--- a/video/index.html
+++ b/video/index.html
@@ -157,22 +157,8 @@ text-decoration:none;
     </div>
 </header>
 <body>
-  <div class="mdui-center" id="content-inner" style="width:95%; max-width:700pt;">
+  <div class="mdui-center" id="content-inner" style="width:100%; max-width:400px;">
 <div id="recent-posts" class="mdui-center">
- 
-<br>
-<br>
- <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
- <div class="mdui-card-media">
- <div id="container">
- <div id="photo">
- <img src="//lyfgta.com/pic/AboutMe.png" />
- <img src="//lyfgta.com/pic/Setting.png" />
- <img src="//lyfgta.com/pic/search.png" />
- </div>
- </div>
- </div>
- </div>
  
 <br>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search..." class="article-content mdui-container mdui-center mdui-shadow-12">
@@ -215,6 +201,20 @@ text-decoration:none;
 <br />  
   
 <p><h3>本站提供GTA/Mods免费下载</h3></p>
+
+<br>
+<br>
+ <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
+ <div class="mdui-card-media">
+ <div id="container">
+ <div id="photo">
+ <img src="//lyfgta.com/pic/AboutMe.png" />
+ <img src="//lyfgta.com/pic/Setting.png" />
+ <img src="//lyfgta.com/pic/search.png" />
+ </div>
+ </div>
+ </div>
+ </div>
 
 <br />
   
