--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="//lyfgta.com/css/mdui.min.css">
 	<script src="//lyfgta.com/js/mdui.min.js"></script>
 	<!--theme-->
+	<link rel="stylesheet" href="//lyfgta.com/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/post.css">
@@ -25,17 +26,6 @@
     <title>Lyfgta | 徕一发</title>
 	
 </head>
-
-<!--去除A标签下划线-->
-<style type="text/css">
-
-a{
-
-text-decoration:none;
-
-}
-
-</style>
 
 <!--header_bar-->
 <div class="mdui-appbar mdui-shadow-0" id="bar">
