--- a/video/index.html
+++ b/video/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="//lyfgta.com/css/mdui.min.css">
 	<script src="//lyfgta.com/js/mdui.min.js"></script>
 	<!--theme-->
+	<link rel="stylesheet" href="//lyfgta.com/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/post.css">
