--- a/video/index.html
+++ b/video/index.html
@@ -165,9 +165,9 @@
  <div class="mdui-card-media">
  <div id="container">
  <div id="photo">
- <img src="//lyfgta.com/pic/AboutMe.png" />
- <img src="//lyfgta.com/pic/Setting.png" />
- <img src="//lyfgta.com/pic/search.png" />
+ <img src="//lyfgta.com/pic/am.jpg" />
+ <img src="//lyfgta.com/pic/modd.jpg" />
+ <img src="//lyfgta.com/pic/gd.jpg" />
  </div>
  </div>
  </div>
