--- a/video/index.html
+++ b/video/index.html
@@ -166,9 +166,9 @@
  <div class="mdui-card-media">
  <div id="container">
  <div id="photo">
- <img src="//lyfgta.com/pic/am.jpg" />
- <img src="//lyfgta.com/pic/modd.jpg" />
- <img src="//lyfgta.com/pic/gd.jpg" />
+ <a href="/about" ><img src="//lyfgta.com/pic/am.jpg" /></a>
+ <a href="/moddownload" ><img src="//lyfgta.com/pic/modd.jpg" /></a>
+ <a href="/gamedownload" ><img src="//lyfgta.com/pic/gd.jpg" /></a>
  </div>
  </div>
  </div>
