--- a/about/index.html
+++ b/about/index.html
@@ -128,6 +128,7 @@ text-decoration:none;
 	<script src="//lyfgta.gitee.io/js/time.js"></script>
 	</h3> 
 	
+	<p align="center"><a href="//lyfgta.com/footage/lyfgta.apk"><img src="//lyfgta.com/pic/androiddownload.jpg"></a></p>
 	<p align="left">
 	&nbsp&nbsp&nbsp&nbspLYFGTA是高中我玩SAMP想到的名字。
 	为了纪念GTA带给我愉快的童年时光，于是就有了LYFGTA网站！<br>
