Update and rename indexseach.css to index.html

--- a/css/index.html
+++ b/css/index.html
@@ -1,5 +1,5 @@
 #myInput {
-    background-image: url('https://lyfgta.gitee.io/pic/searchicon.png'); /* 搜索按钮 */
+    background-image: url('https://lyfgta.com/pic/searchicon.png'); /* 搜索按钮 */
     background-position: 10px 12px; /* 定位搜索按钮 */
     background-repeat: no-repeat; /* 不重复图片*/
     font-size: 16px; /* 加大字体 */
