--- a/about/index.html
+++ b/about/index.html
@@ -147,7 +147,7 @@ text-decoration:none;
 	</div>
 	</div>
 	<h2>土豪打赏榜</h2>
-        <p><div class="guangshu"><img src="//lyfgta.com/pic/zanshang/jjzs.gif"></div></p>
+        <p><div class="guangshu"><img src="//lyfgta.com/pic/jjzs.gif"></div></p>
 	</article>
 
   </div>
